--- a/pw_u1_p5_sc/css/estiloIndexable.css
+++ b/pw_u1_p5_sc/css/estiloIndexable.css
@@ -11,6 +11,7 @@
 
 .cabecera h1,h6 {
     text-align: left;
+    margin: 20px  10px;
 }
 
 .menu{
@@ -32,6 +33,51 @@ body{
 .agrupar{
     border: 1px solid black;
     background: white;
-    width: 900 px;
-    margin: 20px 50px;
+    width: 900px;
+    margin: 20px auto;
+}
+
+.cabecera{
+    background: greenyellow;
+    border: 2px groove blue;
+    padding: 20px;
+}
+.seccion{
+    float: left;
+    width: 600px;
+    margin: 10px;
+}
+article{
+    background:rgb(237, 237, 174) ;
+    border: 5px groove  rgb(49, 4, 91);
+    margin-bottom: 15px;
+    padding: 20px;
+}
+img{
+    width: 200px;
+    height: 250px;
+    margin: 20px auto;
+
+}
+time{
+    color: aquamarine;
+}
+article footer{
+    text-align: right;
+}
+#idreferencias{
+    width: 250px;
+    float: right;
+    margin: 20px  10px;
+    border: 1px groove black;
+}
+.piedepag{
+    clear: both;
+}
+
+#idreferencias blockquote{
+    border: 1px solid black;
+    padding: 10px;
+    background: rgb(237, 237, 174);
+    margin-bottom: 5px;
 }
