--- a/pw_u1_p5_sc/css/estilosCalculadora.css
+++ b/pw_u1_p5_sc/css/estilosCalculadora.css
@@ -49,3 +49,6 @@ h1{
     justify-content:center ;/* para justificar su contenido */
     align-items: center; /*  ali;a los item*/
 }
+button:hover{
+background-color: aquamarine;
+}
