--- a/pw_u1_p5_sc/css/estudianteFormulario.css
+++ b/pw_u1_p5_sc/css/estudianteFormulario.css
@@ -49,10 +49,17 @@ input:focus{
 }
 
 button{
-    width: 100px;
+    width: 125px;
     height: 40px;
     margin: 10px 120px;
     font-size: 20px;
+   
+}
+button:hover{
+    background-color: #59abe3;
+    border-radius: 20px;
+    
+    
 }
 
 
