--- a/pw_u1_p5_sc/css/Estil.css
+++ b/pw_u1_p5_sc/css/Estil.css
@@ -10,7 +10,7 @@
     grid-template-rows: 150px repeat(6,50px);
     background-color: #00916e;
     padding: 15px;
-    margin: 300px 50px;
+    margin: 200px 50px;
     border-radius: 32px;
     box-shadow: 15px 10px 5px 5px #00000033;
 }
@@ -23,7 +23,6 @@
     border-radius:  32px;
     text-align: right;
     box-shadow: 0px 0px 0px 10px #00000033;
-    color: aliceblue;
 }
 
 button{
@@ -33,8 +32,25 @@ button{
     border: none;
     background-color: #00916e;
     box-shadow: 5px 5px 10px 2px #00000040;
+    font-size: 25px;
+    cursor: pointer;
 
 }
 button:hover{
     background-color: #46d2b2;
+}
+.bt_s{
+    grid-column: span 2;
+}
+.display:hover{
+    background-color: #5a5959;
+}
+
+body{
+    background-color: #224870;
+}
+
+*{
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
