--- a/pw_u1_p5_sc/css/Estil.css
+++ b/pw_u1_p5_sc/css/Estil.css
@@ -54,3 +54,7 @@ body{
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+button:focus{
+    background-color: #d24652;
+    
+}
